<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.ecolexml</groupId>
  <artifactId>Ecole_XML_Java</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Ecole_XML_Java</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>5.10.2</junit.version>
  </properties>

  <dependencies>
    <!-- iText Core -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itext-core</artifactId>
      <version>8.0.5</version>
      <type>pom</type>
    </dependency>
    <!-- iText HTML to PDF Converter -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>html2pdf</artifactId>
      <version>5.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.36</version>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>fop</artifactId>
      <version>2.3</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-svg-dom</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-css</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-dom</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-parser</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-util</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-constants</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-i18n</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-bridge</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-anim</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-xml</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-awt-util</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-gvt</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-transcoder</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-svggen</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-extension</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-ext</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-all</artifactId>
      <version>1.14</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-script</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.11.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>5.2.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>5.2.3</version>
    </dependency>

    <!-- Flying Saucer for rendering HTML to image -->
    <dependency>
      <groupId>org.xhtmlrenderer</groupId>
      <artifactId>flying-saucer-core</artifactId>
      <version>9.1.20</version>
    </dependency>

    <dependency>
      <groupId>org.xhtmlrenderer</groupId>
      <artifactId>flying-saucer-pdf</artifactId>
      <version>9.1.20</version>
    </dependency>

    <!-- Saxon HE (Home Edition) pour XQuery -->
    <dependency>
      <groupId>net.sf.saxon</groupId>
      <artifactId>Saxon-HE</artifactId>
      <version>10.5</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>--add-exports=org.xhtmlrenderer.simple=batik.anim</argLine>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
